[gd_scene load_steps=3 format=2]

[ext_resource path="res://titlescreen/screenmain.png" type="Texture" id=1]
[ext_resource path="res://scenes/titlescreen.gd" type="Script" id=2]

[node name="titlescreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titlescreen" type="Sprite" parent="."]
position = Vector2( 512, 300 )
z_index = 1
texture = ExtResource( 1 )

[node name="play" type="Button" parent="."]
margin_left = 408.0
margin_top = 280.0
margin_right = 600.0
margin_bottom = 352.0
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Button" parent="."]
anchor_right = 0.006
anchor_bottom = 0.013
margin_left = 328.0
margin_top = 368.0
margin_right = 689.856
margin_bottom = 432.2
text = "controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
margin_left = 424.0
margin_top = 456.0
margin_right = 600.0
margin_bottom = 520.0
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="controls" to="." method="_on_controls_button_up"]
[connection signal="button_up" from="exit" to="." method="_on_exit_button_up"]
